fix side gap on larger screen sizes

--- a/asset/css/inspinia/css/style.css
+++ b/asset/css/inspinia/css/style.css
@@ -8366,6 +8366,11 @@ body.landing-page {
   background-size: auto 80vh;
   }
 }
+@media(max-width: 1640px) and (min-width: 768px) {
+  .landing-page .header-back.one {
+  background-size: auto 200vh;
+  }
+}
 
 
 
